[gd_scene load_steps=22 format=3 uid="uid://ds7uyvpupe34x"]

[ext_resource type="SpriteFrames" uid="uid://b7n3u8ytapvb4" path="res://src/hatbot/player/player_sprite_frames.tres" id="1_w3vs6"]
[ext_resource type="Script" path="res://src/hatbot/player/Monster.gd" id="1_wj1cn"]
[ext_resource type="Texture2D" uid="uid://dmx8juk2455h4" path="res://assets/hatbot/light64px1.png" id="2_go366"]
[ext_resource type="Script" path="res://addons/beehive/machine.gd" id="3_hxyr2"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/Idle.gd" id="4_h5e7h"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/Run.gd" id="5_x1nnv"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/Jump.gd" id="6_e7xnp"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/Fall.gd" id="7_ovoef"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/KnockedBack.gd" id="8_rpcmv"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/Dead.gd" id="9_betuw"]
[ext_resource type="PackedScene" uid="uid://sw03ot27btw2" path="res://addons/hood/ActionHint.tscn" id="9_ocb0p"]
[ext_resource type="PackedScene" uid="uid://blgwmxet7aj7i" path="res://addons/hood/actions/ActionDetector.tscn" id="10_68kyd"]
[ext_resource type="PackedScene" path="res://src/hatbot/powerups/Sword.tscn" id="10_a54r4"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/Climb.gd" id="10_vycc5"]
[ext_resource type="PackedScene" uid="uid://wkwt20kwv7ka" path="res://addons/camera/CamPOF.tscn" id="11_8r4cy"]
[ext_resource type="Script" path="res://src/hatbot/player/machine/Sit.gd" id="12_7npxa"]
[ext_resource type="PackedScene" path="res://src/hatbot/player/HeartParticles.tscn" id="17_g1yjn"]
[ext_resource type="PackedScene" path="res://src/hatbot/player/SkullParticles.tscn" id="18_6urtn"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_67gj4"]
cull_mode = 2
polygon = PackedVector2Array(-3, -4, 3, -4, 3, 1, 2, 5, -2, 5, -3, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fy5s5"]
radius = 3.8
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56h2g"]
size = Vector2(96, 96)

[node name="Monster" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
collision_mask = 49
script = ExtResource("1_wj1cn")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_67gj4")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_go366")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_fy5s5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = ExtResource("1_w3vs6")
animation = &"air"
autoplay = "idle"

[node name="Machine" type="Node" parent="."]
script = ExtResource("3_hxyr2")

[node name="Idle" type="Node" parent="Machine"]
script = ExtResource("4_h5e7h")

[node name="Run" type="Node" parent="Machine"]
script = ExtResource("5_x1nnv")

[node name="Jump" type="Node" parent="Machine"]
script = ExtResource("6_e7xnp")

[node name="Fall" type="Node" parent="Machine"]
script = ExtResource("7_ovoef")

[node name="KnockedBack" type="Node" parent="Machine"]
script = ExtResource("8_rpcmv")

[node name="Dead" type="Node" parent="Machine"]
script = ExtResource("9_betuw")

[node name="Climb" type="Node" parent="Machine"]
script = ExtResource("10_vycc5")

[node name="Sit" type="Node" parent="Machine"]
script = ExtResource("12_7npxa")

[node name="Sword" parent="." instance=ExtResource("10_a54r4")]
position = Vector2(9, -10)

[node name="ActionHint" parent="." instance=ExtResource("9_ocb0p")]
position = Vector2(0, -15)
scale = Vector2(0.4, 0.4)

[node name="ActionDetector" parent="." instance=ExtResource("10_68kyd")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionDetector"]
shape = SubResource("RectangleShape2D_56h2g")

[node name="CamPOF" parent="." instance=ExtResource("11_8r4cy")]
position = Vector2(2.08165e-12, -60)
active = false

[node name="CamPOF2" parent="." instance=ExtResource("11_8r4cy")]
position = Vector2(2.08165e-12, 60)
active = false

[node name="LookPoint" parent="." instance=ExtResource("11_8r4cy")]
position = Vector2(50, 2.08165e-12)
active = false

[node name="HighWallCheck" type="RayCast2D" parent="."]
position = Vector2(-2, -3)
rotation = -1.57079
target_position = Vector2(0, 10)

[node name="LowWallCheck" type="RayCast2D" parent="."]
position = Vector2(-2, 6)
rotation = -1.57079
target_position = Vector2(0, 10)

[node name="NearGroundCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 40)

[node name="HeartParticles" parent="." instance=ExtResource("17_g1yjn")]

[node name="SkullParticles" parent="." instance=ExtResource("18_6urtn")]
